Bug 150490 - ReportBuilder: Wizards starts showing two different data sources
Summary: ReportBuilder: Wizards starts showing two different data sources
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: Database-Wizard
  Show dependency treegraph
 
Reported: 2022-08-19 06:30 UTC by Robert Großkopf
Modified: 2024-06-06 13:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Scrreenshot with different data sources of dialog "Report Wizard" and "Add field" (193.79 KB, image/png)
2022-08-19 06:30 UTC, Robert Großkopf
Details
issue for secondary add field appear on bottom (86.82 KB, image/png)
2022-09-11 10:26 UTC, Stephen Reginold
Details
issue for secondary Add field appear on bottom (82.61 KB, image/png)
2022-09-11 10:26 UTC, Jegatheesan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-08-19 06:30:06 UTC
Created attachment 181875 [details]
Scrreenshot with different data sources of dialog "Report Wizard" and "Add field"

Open a database, which contains some tables and also a query.
Execute "Use wizard to create a report".
Wizard will start showing a dialog "Report Wizard", which will show the first query in query folder.
At the bottom of the window will also appear the dialog "Add field". This dialog will show the fields of the first table in table folder.

The dialog "Add field" shouldn't appear at all. But if it appears it should show the same content as the dialog "Report Wizard".

This bug appears in LO 7.3.5.2 and also LO 7.4.0.2 on OpenSUSE 15.3 64bit rpm Linux.
Comment 1 Stephen Reginold 2022-09-11 10:21:25 UTC
Open a database, which contains some tables and also a query.
Execute "Use wizard to create a report".
Wizard will start showing a dialog "Report Wizard", which will show the first query in query folder.
At the bottom of the window will also appear the dialog "Add field". This dialog will show the fields of the first table in table folder.

after the above steps the another add field not appear in bottom and its fixed current version of libre office 7.4.0.0 alpha0 linux mint 20.2
Comment 2 Stephen Reginold 2022-09-11 10:26:27 UTC
Created attachment 182387 [details]
issue for secondary add field appear on bottom

Open a database, which contains some tables and also a query.
Execute "Use wizard to create a report".
Wizard will start showing a dialog "Report Wizard", which will show the first query in query folder.
At the bottom of the window will also appear the dialog "Add field". This dialog will show the fields of the first table in table folder.

after the above steps the another add field not appear in bottom and its fixed current version of libre office 7.4.0.0 alpha0 linux mint 20.2
Comment 3 Jegatheesan 2022-09-11 10:26:54 UTC
Created attachment 182388 [details]
issue for secondary Add field appear on bottom

NOT REPRODUCED:

1. Open a database, 
2. which contains some tables and also a query.
3. Execute "Use wizard to create a report".
4. Wizard will start showing a dialog "Report Wizard", which will show the first query in query folder.

After the above steps the another add field not appear in bottom and its fixed current version of libre office 7.4.0.0 alpa0. and works fine issue resolved.

ENVIRONMENT: Libre Office 7.4.0.0 alpha0 Linus Mint 21.2.
Comment 4 Robert Großkopf 2022-09-11 12:58:29 UTC
Don't you know how to work with bugs here?

If you couldn't reproduce a bug you couldn't set it to fixed. You have to leave it as unconfirmed.

Then there are two attachments, aren't readable at all. Try to open.

I have tested this behavior again, now with LO 7.4.1.1, not your old 7.0.0.0 alpha. Behavior is the same as you could see in https://bugs.documentfoundation.org/attachment.cgi?id=181875

Have set this bug back to unconfirmed.

Version here:
Version: 7.4.1.1 / LibreOffice Community
Build ID: 0a046a10cbf1679eea5538bd3ab63156caa3a036
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 5 Robert Großkopf 2022-09-11 13:24:05 UTC
Thanks Alex for changing the type of the attachments:
Attachment
https://bugs.documentfoundation.org/attachment.cgi?id=182387
and
https://bugs.documentfoundation.org/attachment.cgi?id=182388
will show the query wizard, not the wizard for reports.

So both tests test the wrong wizard.
Comment 6 Alex Thurgood 2022-09-11 13:33:19 UTC
Confirmed in 
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 5aa3f046f934092fbfd7cc92b93d79b4f548cc13
CPU threads: 8; OS: Mac OS X 12.5.1; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded


Confirming also with 
Version: 7.3.5.2 / LibreOffice Community
Build ID: 184fe81b8c8c30d8b5082578aee2fed2ea847c01
CPU threads: 8; OS: Mac OS X 12.5.1; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded


In my case, the Add Field window from the first table in the table list is hidden behind the Report Wizard dialog which has the immediate focus, but it is displayed.
Comment 7 Julien Nabet 2023-12-31 10:52:48 UTC
I gave a try with:
https://gerrit.libreoffice.org/c/core/+/161464

Now as I put in comment, not sure if there won't be wrong side effect.
Perhaps only the condition should be modified.
Comment 8 Commit Notification 2024-01-07 10:44:30 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39bad5d9f695972dbccd66d971c1d5df4cfe9a99

tdf#150490: ReportBuilder: Wizards starts showing two different data sources

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2024-01-07 11:13:29 UTC
To put it clearly, the patch prevents from the symptom described on the bugtracker but I don't know if there would be some wrong side effects.
So perhaps it's not the right fix and so the patch may be reverted.
Comment 10 Julien Nabet 2024-06-06 13:04:33 UTC
Let's put this one to FIXED.
If someone finds a pb, don't hesitate to tell and I'll revert the patch and reopen the tracker.