tdf#150490: ReportBuilder: Wizards starts showing two different data sources

Change-Id: Ic9287228b8f001ccfe8dc7db1bafa4b9e35e6ece
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161464
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>